fixed so that files can be opened, tabs work, writing in the editor now works, and the syntax highlighting also works now